--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.20",
+    "less": "^4.5.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router": "^7.13.0",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.18",
+    "wretch": "^3.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
