--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,15 @@
     "@mui/material": "^7.3.7",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
+    "lenis": "^1.3.17",
     "less": "^4.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.13.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18",
-    "wretch": "^3.0.6"
+    "wretch": "^3.0.6",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
