--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "less": "^4.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-router": "^7.13.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18",
